header & projects CSS styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Emili0
         </h1>
 
-        <nav>
+        <nav>   
             <ul>
                 <li>
                     <a href="#projects">Projects</a>
@@ -38,45 +38,48 @@
         <div class="section-title">
             <h2>PROJECTS</h2>
         </div>
-        <div>
-            <h3 class="project-title">
-                Run Buddy 
-            </h3>
 
+    <div class="section-structure"> 
+        <div class="project-structure">
             <div class="project-image">
-                <img src="" alt="">
-            </div>
-
-             <p class="project-bio">
-                    Official Site or Run Buddy
-            </p>
-        </div>
-        <div>
-            <h3 class="project-title">
-                COMING SOON...
-            </h3>
-
+                <img src="./assets/Images/Placeholder-image-portfolio.gif" alt="Run buddys official webpage" class="project-img">
+            </div> 
+            <div>
+                <h3 class="project-title">
+                    COMING SOON...
+                </h3>
+                <p class="project-bio">
+                    COMING SOON...
+                </p>
+              </div> 
+        </div>  
+        <div class="project-structure">
             <div class="project-image">
-                <img src="" alt="">
-            </div>
-
-            <p class="project-bio">
-                COMING SOON...
-            </p>
+                <img src="./assets/Images/Run-Buddy-Portfolio-IMG.png" alt="Run buddys official webpage" class="project-img" id="first-project-img">
+            </div> 
+            <div>
+                <h3 class="project-title">
+                    Run Buddy 
+                </h3>
+                <p class="project-bio">
+                    Official Site for Run Buddy
+                </p>
+              </div> 
         </div>
-        <div>
-            <h3 class="project-title">
-                COMING SOON...
-            </h3>
-
+        <div class="project-structure">
             <div class="project-image">
-                <img src="" alt="">
-            </div>
-
-            <p class="project-bio">
-                COMING SOON...
-            </p>
-        </div>
+                <img src="./assets/Images/Placeholder-image-portfolio.gif" alt="Run buddys official webpage" class="project-img">
+            </div> 
+            <div>
+                <h3 class="project-title">
+                   COMING SOON...
+                </h3>
+                <p class="project-bio">
+                    COMING SOON...
+                </p>
+              </div> 
+        </div>      
+    </div>
 
     </section>
     <section id="about-me">
@@ -115,7 +118,7 @@
                     <h3>@EMILI0ETH</h3>
                 </a>
             </div>
-            <div id="Instagram">
+            <div id="instagram">
                 <img src="" alt="" id="instagram-img">
 
                 <a href="">
