final css styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
         <h1 id="Main-title">
-            Emili0
+            EMILI0
         </h1>
 
         <nav>   
@@ -33,6 +33,9 @@
         </nav>
 
     </header>
+    <hero class="hero">
+        <img src="./assets/Images/gotham-city.webp" alt="" id="hero-img">
+    </hero>
     <section id="projects">
 
         <div class="section-title">
@@ -42,7 +45,7 @@
     <div class="section-structure"> 
         <div class="project-structure">
             <div class="project-image">
-                <img src="./assets/Images/Placeholder-image-portfolio.gif" alt="Run buddys official webpage" class="project-img">
+              <img src="./assets/Images/Placeholder-image-portfolio.gif" alt="Run buddys official webpage" class="project-img">
             </div> 
             <div>
                 <h3 class="project-title">
@@ -55,20 +58,20 @@
         </div>  
         <div class="project-structure">
             <div class="project-image">
-                <img src="./assets/Images/Run-Buddy-Portfolio-IMG.png" alt="Run buddys official webpage" class="project-img" id="first-project-img">
+               <a href="https://emilioeth.github.io/Run-Buddy/" target="blank"> <img src="./assets/Images/Run-Buddy-Portfolio-IMG.png" alt="Run buddys official webpage" class="project-img" id="first-project-img"> </a> 
             </div> 
             <div>
                 <h3 class="project-title">
-                    Run Buddy 
+                  Run Buddy 
                 </h3>
                 <p class="project-bio">
                     Official Site for Run Buddy
                 </p>
               </div> 
         </div>
-        <div class="project-structure">
+       <div class="project-structure">
             <div class="project-image">
-                <img src="./assets/Images/Placeholder-image-portfolio.gif" alt="Run buddys official webpage" class="project-img">
+                <img src="./assets/Images/Placeholder-image-portfolio.gif" alt="Run buddys main page" class="project-img">
             </div> 
             <div>
                 <h3 class="project-title">
@@ -77,27 +80,33 @@
                 <p class="project-bio">
                     COMING SOON...
                 </p>
-              </div> 
-        </div>      
+            </div> 
+        </div>
     </div>
-
     </section>
     <section id="about-me">
     
-        <div class="section-title">
+        <div id="bio-section-title">
            <h2>ABOUT ME</h2>
         </div>
  
         <div id="bio-image-n-text">
 
             <div id="bio-image">
-                <img src="" alt="">
+              <a href="https://opensea.io/assets/ethereum/0xa310425046661c523d98344f7e9d66b32195365d/46641" target="blank"> <img src="./assets/Images/unnamed.gif" alt="digital animated avatar" id="bio-img"> </a>
             </div>
 
             <div id="bio-text">
                 <h3>
-
+                    EMILI0
                 </h3>
+                <p>
+                BLOCKCHAIN ENTHUSIAST. NFT DEGEN. DEV. </br>
+                I AM A 19 YO WEB DEVELOPER, MOSTLY FOCUSING </br>
+                ON CRYPTO/NFT PROJECTS FOR THE TIME BEING. </br>
+                I AM FAMILIAR WITH THE FOLLOWING LANGUAGES, <br>
+                HTML, CSS, JS, to be continued... 
+                </p>
             </div>
         </div>
     </section> 
@@ -112,23 +121,27 @@
         <div id="socials"> 
 
             <div id="twitter">
-                <img src="" alt="" id="twitter-img">
+                <img src="./assets/Images/download.png" alt="Twitter Logo" id="twitter-img" class="socials-img">
 
-                <a href="">
-                    <h3>@EMILI0ETH</h3>
+                <a href="https://twitter.com/Emili0Eth">
+                    <h3 id="twitter-text">@EMILI0ETH</h3>
                 </a>
             </div>
             <div id="instagram">
-                <img src="" alt="" id="instagram-img">
+                <img src="./assets/Images/download.jpg" alt="Instagram Logo" id="instagram-img" class="socials-img">
 
-                <a href="">
-                    <h3>@EMILIOETH</h3>
+                <a href="https://www.instagram.com/emilioeth/">
+                    <h3 id="instagram-text">@EMILIOETH</h3>
                 </a>
             </div>
         </div>
 
     </section>
+    <footer>
 
+        <h2> MADE BY EMILI0 </h2>
+
+    </footer>
 </body>
 
 </html>
