--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
             <div id="twitter">
                 <img src="./assets/Images/download.png" alt="Twitter Logo" id="twitter-img" class="socials-img">
 
-                <a href="https://twitter.com/Emili0Eth">
+                <a href="https://twitter.com/Emili0Eth" target="blank">
                     <h3 id="twitter-text">@EMILI0ETH</h3>
                 </a>
             </div>
             <div id="instagram">
                 <img src="./assets/Images/download.jpg" alt="Instagram Logo" id="instagram-img" class="socials-img">
 
-                <a href="https://www.instagram.com/emilioeth/">
+                <a href="https://www.instagram.com/emilioeth/" target="blank">
                     <h3 id="instagram-text">@EMILIOETH</h3>
                 </a>
             </div>
