fixed hero, and added mail

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     </header>
     <hero class="hero">
-        <img src="./assets/Images/gotham-city.webp" alt="" id="hero-img">
+        <img src="./assets/Images/images.jpg" alt="" id="art-img">
     </hero>
     <section id="projects">
 
@@ -112,12 +112,12 @@
     </section> 
     <section id="contact">
         
-        <div class="section-title">
+        <div class="section-title" id="reach-out-title">
             <h2>
                 REACH OUT
             </h2>
         </div>
-
+        <div id="socials-structure">
         <div id="socials"> 
 
             <div id="twitter">
@@ -136,6 +136,12 @@
             </div>
         </div>
 
+            <div id="mail">
+                <a href="mailto:emiliothomasking@gmail.com" target="blank">
+               <img src="./assets/Images/Screen Shot 2022-05-20 at 12.25.22 PM.png" alt="Mail Logo" id="mail-img">
+                </a>
+            </div>
+        </div>
     </section>
     <footer>
 
