added typing animation

--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -70,9 +70,9 @@
             <!-- ===== Contact info item end ====== -->
              <!-- ===== Contact info item start ====== -->
              <div class="contact-info-item padd-15">
-              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
-              <h4>LinkedIn</h4>
-              <p><a href="https://www.linkedin.com/in/emili0-03728822a/" target="blank" class="btn-contact-contact">@EMILI0</a></p>
+              <div class="icon"><i class="fa-brands fa-github"></i></div>
+              <h4>GitHub</h4>
+              <p><a href="https://github.com/Emilioeth" target="blank" class="btn-contact-contact">@EMILI0ETH</a></p>
             </div>
             <!-- ===== Contact info item end ====== -->
              <!-- ===== Contact info item start ====== -->
@@ -127,6 +127,10 @@
 
 
     </div>
+
+<!-- JS files -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./assets/script.js"></script>
 
 </body>
 </html>
