--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                         </h3>
 
                         <h3 class="my-profession">
-                        I' m a <span class="typing">web developer</span>
+                        I' m a  <span class="typing">W</span>
                         </h3>
 
                         <p>
-                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusin on Blockchain technology and Web3.0 brands, still feel free to check my <a href="./html-pages/projects.html">Portfolio</a> out, and if theres anything I can help you with <a href="./html-pages/contact.html">Reach Out!</a> 
+                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusin on Blockchain technology and Web3.0 brands, still feel free to check my <a href="./html-pages/projects.html">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
                         </p>
 
-                        <a href="https://github.com/Emilioeth" class="btn" target="blank">
-                        Github
+                        <a href="./html-pages/contact.html" class="btn" target="blank">
+                        Hire Me
                         </a>
 
                     </div> 
@@ -85,6 +85,10 @@
         </section>
 
     </div>
+
+<!-- JS files -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./assets/script.js"></script>
 
 </body>
 </html>
