fixed home img mobile responsiveness

--- a/html-pages/services.html
+++ b/html-pages/services.html
@@ -50,6 +50,9 @@
                   <h2>Services</h2>
                 </div>
               </div>
+
+              <div class="phone-services-title"><h2>Services</h2></div>
+
               <div class="row services-all">
                 <!-- ===== Service item Start ====== -->
                 <div class="service-item padd-15">
@@ -90,7 +93,7 @@
                     <div class="icon">
                       <i class="fa fa-code"></i>
                     </div>
-                    <h4>Blockchain Development</h4>
+                    <h4 id="blockchain-title-mobile">Blockchain <span>Development</span></h4>
                     <p> I can develop your Blockchain project for you, wether that'd be a simple NFT project or more complex DAO's</p>
                   </div>
                 </div>
