--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
             <div class="container">
 
-                <div class="row">
+                <div class="row container-home">
 
-                    <div class="home-info padd-15">
+                    <div class="home-info padd-15 home-info-pos">
 
                         <h3 class="hello">
                             Hello, my name is <span class="name">Emili0</span>
@@ -63,7 +63,7 @@
                         </h3>
 
                         <p>
-                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusin on Blockchain technology and Web3.0 brands, still feel free to check my <a href="./html-pages/projects.html">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
+                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusing on Blockchain technology and Web3.0 brands, still feel free to check my <a href="./html-pages/projects.html">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
                         </p>
 
                         <a href="./html-pages/contact.html" class="btn" target="blank">
@@ -72,7 +72,7 @@
 
                     </div> 
 
-                    <div class="home-img padd-15">
+                    <div class="home-img padd-15 home-img-pos">
 
                         <a href="https://opensea.io/assets/ethereum/0xa310425046661c523d98344f7e9d66b32195365d/46641" target="blank"> 
                             <img src="./assets/Images/unnamed.gif" alt="digital animated avatar"> 
