--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -51,6 +51,11 @@
               <h2>Contact Me</h2>
             </div>
           </div>
+
+            <div class="phone-title-contact">
+              <h2>Contact</h2>
+            </div>
+
           <h3 class="contact-title padd-15"> Any Questions ?</h3>
           <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICE</h4>
           <div class="row">
