added nav toggler

--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -20,6 +20,10 @@
                     <img src="../assets/Images/Logo-contact.png" alt="personal logo" id="logo-img">
                 </a>
             </div>
+
+            <div class="nav-toggler nav-toggler-contact">
+              <span></span>
+            </div>
     
             <ul class="nav nav-contact">
 
@@ -28,7 +32,7 @@
                 </li>
 
                 <li>
-                    <a href="./projects.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
+                    <a href="./portfolio.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
                 </li>
 
                 <li>
@@ -135,7 +139,7 @@
 
 <!-- JS files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./assets/script.js"></script>
+<script src="../assets/other-js/script-cont.js"></script>
 
 </body>
 </html>
