--- a/html-pages/services.html
+++ b/html-pages/services.html
@@ -20,6 +20,10 @@
                     <img src="../assets/Images/Logo-services.png" alt="personal logo" id="logo-img">
                 </a>
             </div>
+
+            <div class="nav-toggler nav-toggler-services">
+              <span></span>
+            </div>
     
             <ul class="nav nav-services">
 
@@ -28,7 +32,7 @@
                 </li>
 
                 <li>
-                    <a href="./projects.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
+                    <a href="./portfolio.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
                 </li>
 
                 <li>
@@ -83,7 +87,7 @@
                       <i class="fa fa-palette"></i>
                     </div>
                     <h4>Web Design</h4>
-                    <p> I can design your already developed website, making it attractive for customers / visitors.</p>
+                    <p id="design-p-mobile"> I can design your already developed website, making it attractive for customers / visitors.<span>Taking it to the next level</span></p>
                   </div>
                 </div>
                 <!-- ===== Service item End ====== -->
@@ -116,7 +120,7 @@
                         <i class="fa fa-brands fa-ethereum"></i>
                     </div>
                     <h4> Web3.0 Presence </h4>
-                    <p> I can also build a web presence for your Web3.0 business / organization. (Includes Web development / design)</p>
+                    <p> I can also build a web presence for your Web3.0 business / organization. (Developing and Desigining)</p>
                   </div>
                 </div>
                 <!-- ===== Service item End ====== -->
@@ -130,7 +134,7 @@
 
 <!-- JS files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./assets/script.js"></script>
+<script src="../assets/other-js/script-serv.js"></script>
 
 </body>
 </html>
