--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -21,6 +21,10 @@
                     <img src="../assets/Images/My project 2.png" alt="personal logo" id="logo-img">
                 </a>
             </div>
+
+            <div class="nav-toggler nav-toggler-portfolio">
+              <span></span>
+            </div>
     
             <ul class="nav nav-portfolio">
 
@@ -29,7 +33,7 @@
                 </li>
 
                 <li>
-                    <a href="../html-pages/projects.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
+                    <a href="../html-pages/portfolio.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
                 </li>
 
                 <li>
@@ -49,7 +53,7 @@
             <div class="container proj-container">
 
               <div class="row proj-row-2">
-                <div class="section-title padd-15">
+                <div class="section-title padd-15 port-heading">
                   <h2>Portfolio</h2>
                 </div>
               </div>
@@ -173,7 +177,7 @@
 
 <!-- JS files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./assets/script.js"></script>
+<script src="../assets/other-js/script-port.js"></script>
 
 </body>
 </html>
