--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -97,35 +97,37 @@
           <!-- ====== Contact Form ====== -->
           <div class="row">
             <div class="contact-form padd-15">
+              <form action="https://formspree.io/f/mzbowqgz" method="POST">
               <div class="row">
                 <div class="form-item col-6 padd-15">
                   <div class="form-group">
-                    <input type="text" class="form-control form-control-less" placeholder="Name">
+                    <input type="text" name="name" class="form-control form-control-less" placeholder="Name" id="name-form" required autocomplete="off">
                   </div>
                 </div>
                 <div class="form-item col-6 padd-15">
                   <div class="form-group">
-                    <input type="email" class="form-control form-control-less form-email" placeholder="Email">
+                    <input type="email" name="email" class="form-control form-control-less form-email" id="email-form" placeholder="Email" required autocomplete="off" >
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="form-item col-12 padd-15">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Subject">
+                    <input type="text" name="subject" class="form-control" id="subject-form" placeholder="Subject" required autocomplete="off">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="form-item col-12 padd-15">
                   <div class="form-group">
-                    <textarea name="" class="form-control" id=""  placeholder="Message"></textarea>
+                    <textarea name="message" class="form-control" id="message-form" placeholder="Message" required ></textarea>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="form-item col-12 padd-15">
-                  <button type="submit" class="btn btn-contact">Send Message</button>
+                  <button type="submit" class="btn" id="btn-contact">Send Message</button>
+                </form>
                 </div>
               </div>
             </div>
