more media queries edit lol

--- a/html-pages/thank-you.html
+++ b/html-pages/thank-you.html
@@ -13,11 +13,13 @@
 
         <section class="thank-you-section">
 
+            <div class="center-thankyou">
             <h2> Thank You For Your Submission!</h2>
 
             <a href="../index.html">
             <button> Back </button>
             </a>
+            </div>
 
         </section>
     
