more of the same

--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -62,7 +62,7 @@
 
           <h3 class="contact-title padd-15"> Any Questions ?</h3>
           <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICE</h4>
-          <div class="row">
+          <div class="row row-social-contact">
             <!-- ===== Contact info item start ====== -->
             <div class="contact-info-item padd-15">
               <div class="icon"><i class="fa-brands fa-instagram"></i></div>
