added pre loader animation

--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -8,10 +8,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="../assets/styles.css">
+        <link rel="stylesheet" href="../assets/other-css/port-css">
     </head>
 
 <body>
-
+  
     <div class="wrapperr">
 
         <header>
@@ -176,7 +177,6 @@
     </div>
 
 <!-- JS files -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="../assets/other-js/script-port.js"></script>
 
 </body>
