--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 <body>
 
+        <!-- ***** Preloader End ***** -->
+        <div id="preloader">
+            <div class="jumper">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>  
+      <!-- ***** Preloader End ***** -->
+
     <div class="wrapperr">
 
         <header>
@@ -91,8 +101,14 @@
     </div>
 
 <!-- JS files -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./assets/other-js/jquery-2.1.0.min.js"></script>
+<script src="./assets/other-js/owl-carousel.js"></script>
+<script src="./assets/other-js/jquery.counterup.min.js"></script>
+<script src="./assets/other-js/lightbox.js"></script>
 <script src="./assets/script.js"></script>
+
 
 </body>
 </html>
