--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -142,7 +142,9 @@
                  <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
                       <div class="portfolio-img">
-                        <img src="../assets/Images/Placeholder-image-portfolio.gif" alt="">
+                        <a href="https://emilioeth.github.io/Rhyme-Block/" target="blank">
+                        <img src="../assets/Images/Rhyme-Block-IMG.png" alt="Rhyme Block App">
+                        </a>
                       </div>
                     </div>
                   </div>
