--- a/html-pages/services.html
+++ b/html-pages/services.html
@@ -16,7 +16,7 @@
         <header>
 
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../assets/Images/Logo-services.png" alt="personal logo" id="logo-img">
                 </a>
             </div>
