--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -154,7 +154,9 @@
                    <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
                       <div class="portfolio-img">
-                        <img src="../assets/Images/Placeholder-image-portfolio.gif" alt="">
+                        <a href="https://spotify-social-app-project.herokuapp.com/" target="blank">
+                        <img src="../assets//Images/spotlight-Portfolio-IMG-1.png" alt="Spot Light  app">
+                        </a>
                       </div>
                     </div>
                   </div>
