added recent projects + edited portfolio section

--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -65,16 +65,16 @@
           <div class="row row-social-contact">
             <!-- ===== Contact info item start ====== -->
             <div class="contact-info-item padd-15">
-              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
-              <h4>Instagram</h4>
-              <p><a href="https://www.instagram.com/emilioeth/" target="blank" class="btn-contact-contact">@EMILIOETH</a></p>
+              <div class="icon"><i class="fa-brands fa-discord"></i></div>
+              <h4>Discord</h4>
+              <p><a href="https://discordapp.com/users/345388388951654400/" target="blank" class="btn-contact-contact">@EMILI0</a></p>
             </div>
             <!-- ===== Contact info item end ====== -->
              <!-- ===== Contact info item start ====== -->
              <div class="contact-info-item padd-15">
-              <div class="icon"><i class="fa-brands fa-twitter"></i></div>
-              <h4>Twitter</h4>
-              <p><a href="https://twitter.com/Emili0Eth" target="blank" class="btn-contact-contact">@EMILI0ETH</a></p>
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+              <h4>LinkedIn</h4>
+              <p><a href="https://www.linkedin.com/in/emilio-03728822a/" target="blank" class="btn-contact-contact">@EMILIO</a></p>
             </div>
             <!-- ===== Contact info item end ====== -->
              <!-- ===== Contact info item start ====== -->
