--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8"/>
         <title>Portfolio Emili0</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>>
         <link rel="stylesheet" href="../assets/styles.css">
         <link rel="stylesheet" href="../assets/other-css/port-css">
     </head>
@@ -69,11 +69,20 @@
                 <!-- ====== portfolio item start ====== -->
                 <div class="portfolio-item padd-15">
                   <div class="portfolio-item-inner shadow-dark">
-                    <div class="portfolio-img">
-                    <a href="https://emilioeth.github.io/Run-Buddy/" target="blank">
-                      <img src="../assets/Images/Run-Buddy-Portfolio-IMG.png" alt="Run-Buddy web page">
-                    </a>
-                    </div>
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://emilioeth.github.io/Run-Buddy/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/Run-Buddy" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Run-Buddy-Portfolio-IMG.png" alt="Run Buddy Website">
                   </div>
                 </div>
                 <!-- ====== portfolio item End ====== -->
@@ -81,11 +90,20 @@
                  <!-- ====== portfolio item start ====== -->
                  <div class="portfolio-item padd-15">
                   <div class="portfolio-item-inner shadow-dark">
-                    <div class="portfolio-img">
-                    <a href="https://emilioeth.github.io/Horiseon-MainPage/" target="blank">
-                      <img src="../assets/Images/Horiseon-Portfolio-IMG.png" alt="Horiseon web page">
-                    </a>
-                    </div>
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://emilioeth.github.io/Taskinator2.0/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/Taskinator2.0" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Taskinator2.0-Portfolio-IMG.png" alt="Taskinator2.0 Website">
                   </div>
                 </div>
                 <!-- ====== portfolio item End ====== -->
@@ -93,11 +111,20 @@
                  <!-- ====== portfolio item start ====== -->
                  <div class="portfolio-item padd-15">
                   <div class="portfolio-item-inner shadow-dark">
-                    <div class="portfolio-img">
-                    <a href="https://emilioeth.github.io/taskinator/" target="blank">
-                      <img src="../assets/Images/Taskinator-Portfolio-IMG.png" alt="Taskinator web page">
-                    </a>
-                    </div>
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://emilioeth.github.io/Password-Generator/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/Password-Generator" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Passwordgen-Portfolio-IMG.png" alt="Password generator Website">
                   </div>
                 </div>
                 <!-- ====== portfolio item End ====== -->
@@ -105,11 +132,20 @@
                  <!-- ====== portfolio item start ====== -->
                  <div class="portfolio-item padd-15">
                   <div class="portfolio-item-inner shadow-dark">
-                    <div class="portfolio-img">
-                    <a href="https://emilioeth.github.io/Password-Generator/" target="blank">
-                      <img src="../assets/Images/Passwordgen-Portfolio-IMG.png" alt="Password Generator web page">
-                    </a>
-                    </div>
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://emilioeth.github.io/git-it-done/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/git-it-done" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Gititdone-Portfolio-IMG-1.png" alt="Git it Done Website">
                   </div>
                 </div>
                 <!-- ====== portfolio item End ====== -->
@@ -117,11 +153,20 @@
                  <!-- ====== portfolio item start ====== -->
                  <div class="portfolio-item padd-15">
                   <div class="portfolio-item-inner shadow-dark">
-                    <div class="portfolio-img">
-                    <a href="https://emilioeth.github.io/Taskinator2.0/" target="blank">
-                      <img src="../assets/Images/Taskinator2.0-Portfolio-IMG.png" alt="Taskinator 2 Web page">
-                    </a>
-                    </div>
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://emilioeth.github.io/weather-dashboard/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/weather-dashboard" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Weather-Portfolio-IMG-1.png" alt="Weather Dashboard Website">
                   </div>
                 </div>
                 <!-- ====== portfolio item End ====== -->
@@ -129,45 +174,83 @@
                  <!-- ====== portfolio item start ====== -->
                  <div class="portfolio-item padd-15">
                   <div class="portfolio-item-inner shadow-dark">
-                    <div class="portfolio-img">
-                    <a href="https://emilioeth.github.io/Coding-Quiz/" target="blank">
-                      <img src="../assets/Images/Codingquiz-Portfolio-IMG.png" alt="Coding Quiz web page">
-                    </a>
-                    </div>
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://zookeepr-emili0.herokuapp.com/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/zookeepr" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Zookeepr-Portfolio-IMG-1.png" alt="Zookeepr Website">
                   </div>
                 </div>
                 <!-- ====== portfolio item End ====== -->
 
                  <!-- ====== portfolio item start ====== -->
                  <div class="portfolio-item padd-15">
-                    <div class="portfolio-item-inner shadow-dark">
-                      <div class="portfolio-img">
-                        <a href="https://emilioeth.github.io/Rhyme-Block/" target="blank">
-                        <img src="../assets/Images/Rhyme-Block-IMG.png" alt="Rhyme Block App">
-                        </a>
-                      </div>
-                    </div>
+                  <div class="portfolio-item-inner shadow-dark">
+                    <div class="portfolio-overlay"></div>
+                      <ul class="portfolio-icons">
+                        <li>
+                          <a href="https://emilioeth.github.io/Rhyme-Block/" target="blank">
+                            <i class="fa-solid fa-globe"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/Emilioeth/Rhyme-Block" target="blank">
+                            <i class="fa-brands fa-github"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <img src="../assets//Images/Rhyme-Block-IMG.png" alt="RhymeBlock Website">
                   </div>
+                </div>
                   <!-- ====== portfolio item End ====== -->
   
                    <!-- ====== portfolio item start ====== -->
                    <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
-                      <div class="portfolio-img">
-                        <a href="https://spotify-social-app-project.herokuapp.com/" target="blank">
+                      <div class="portfolio-overlay"></div>
+                        <ul class="portfolio-icons">
+                          <li>
+                            <a href="https://spotify-social-app-project.herokuapp.com/" target="blank">
+                              <i class="fa-solid fa-globe"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a href="https://github.com/Emilioeth/Spotlight" target="blank">
+                              <i class="fa-brands fa-github"></i>
+                            </a>
+                          </li>
+                        </ul>
                         <img src="../assets//Images/spotlight-Portfolio-IMG-1.png" alt="Spot Light  app">
-                        </a>
-                      </div>
                     </div>
                   </div>
                   <!-- ====== portfolio item End ====== -->
 
                   <!-- ====== portfolio item start ====== -->
-                  <div class="portfolio-item padd-15">
-                    <div class="portfolio-item-inner shadow-dark portfolio-item-extra">
-                      <div class="portfolio-img">
-                        <img src="../assets/Images/Placeholder-image-portfolio.gif" alt="">
-                      </div>
+                  <div class="portfolio-item portfolio-item-extra padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                      <div class="portfolio-overlay"></div>
+                        <ul class="portfolio-icons">
+                          <li>
+                            <a href="https://emilioeth.github.io/Work-Day-Scheduler/" target="blank">
+                              <i class="fa-solid fa-globe"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a href="https://github.com/Emilioeth/Work-Day-Scheduler" target="blank">
+                              <i class="fa-brands fa-github"></i>
+                            </a>
+                          </li>
+                        </ul>
+                        <img src="../assets//Images/Workscheduler-portfolio.png" alt="WorkScheduler Website">
                     </div>
                   </div>
                   <!-- ====== portfolio item End ====== -->
