--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8"/>
         <title>Portfolio Emili0</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
         <link rel="stylesheet" href="../assets/styles.css">
         <link rel="stylesheet" href="../assets/other-css/port-css">
     </head>
