fixed portfolio route

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </h3>
 
                         <p>
-                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusing on Blockchain technology and Web3.0 brands, please feel free to check my <a href="./html-pages/projects.html">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
+                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusing on Blockchain technology and Web3.0 brands, please feel free to check my <a href="./html-pages/portfolio.html">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
                         </p>
 
                         <a href="./html-pages/contact.html" class="btn btn-hire" target="blank">
