--- a/html-pages/portfolio.html
+++ b/html-pages/portfolio.html
@@ -166,6 +166,9 @@
                           </a>
                         </li>
                       </ul>
+                      <div class="p-wrap">
+                      <p class="portfolio-compatible">(Computer Only)</p>
+                      </div>
                       <img src="../assets//Images/Weather-Portfolio-IMG-1.png" alt="Weather Dashboard Website">
                   </div>
                 </div>
@@ -250,6 +253,9 @@
                             </a>
                           </li>
                         </ul>
+                        <div class="p-wrap">
+                          <p class="portfolio-compatible">(Computer Only)</p>
+                        </div>
                         <img src="../assets//Images/Workscheduler-portfolio.png" alt="WorkScheduler Website">
                     </div>
                   </div>
