--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
         <header>
 
             <div class="logo">
-                <a href="index.html">
+                <a href="Home">
                     <img src="./assets/Images/My project (1).png" alt="personal logo" id="logo-img">
                 </a>
             </div>
@@ -38,19 +38,19 @@
             <ul class="nav nav-home">
 
                 <li class="home-li">
-                    <a href="index.html" class="active"><i class="fa fa-home list-home"></i> Home</a>
+                    <a href="Home" class="active"><i class="fa fa-home list-home"></i> Home</a>
                 </li>
 
                 <li>
-                    <a href="./html-pages/portfolio.html"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
+                    <a href="./page/Portfolio"><i class="fa fa-briefcase list-portfolio"></i> Portfolio</a>
                 </li>
 
                 <li>
-                    <a href="./html-pages/services.html"><i class="fa fa-list list-services"></i> Services</a>
+                    <a href="./page/Services"><i class="fa fa-list list-services"></i> Services</a>
                 </li>
 
                 <li>
-                    <a href="./html-pages/contact.html"><i class="fa fa-comments list-contact"></i> Contact</a>
+                    <a href="./page/Contact"><i class="fa fa-comments list-contact"></i> Contact</a>
                 </li>
 
             </ul>
@@ -77,10 +77,10 @@
                         </h3>
 
                         <p>
-                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusing on Blockchain technology and Web3.0 brands, please feel free to check my <a href="./html-pages/portfolio.html">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
+                            Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusing on Blockchain technology and Web3.0 brands, please feel free to check my <a href="./page/Portfolio">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
                         </p>
 
-                        <a href="./html-pages/contact.html" class="btn btn-hire" target="blank">
+                        <a href="./page/Contact" class="btn btn-hire" target="blank">
                         Hire Me
                         </a>
 
