--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header>
 
             <div class="logo">
-                <a href="Home">
+                <a href="index">
                     <img src="./assets/Images/My project (1).png" alt="personal logo" id="logo-img">
                 </a>
             </div>
@@ -38,7 +38,7 @@
             <ul class="nav nav-home">
 
                 <li class="home-li">
-                    <a href="Home" class="active"><i class="fa fa-home list-home"></i> Home</a>
+                    <a href="index" class="active"><i class="fa fa-home list-home"></i> Home</a>
                 </li>
 
                 <li>
