--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header>
 
             <div class="logo">
-                <a href="index">
+                <a href="">
                     <img src="./assets/Images/My project (1).png" alt="personal logo" id="logo-img">
                 </a>
             </div>
