reworked portfolio for better mobile experience + changed jquery to new version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     <head>
         <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Emili0's official web development and web designing portfolio, where all of his recent projects are shown, as well as wasy to contact him">
         <title>Home Emili0</title>
         <link rel="stylesheet" href="./assets/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
@@ -21,7 +23,7 @@
         </div>  
       <!-- ***** Preloader End ***** -->
 
-    <div class="wrapperr">
+    <div class="wrapperr index-sec">
 
         <header>
 
@@ -62,7 +64,7 @@
         <!-- ===== Main Section ===== -->
         <section class="home active section" id="home"> 
 
-            <div class="container">
+            <div class="container container-index">
 
                 <div class="row container-home">
 
@@ -89,7 +91,7 @@
                     <div class="home-img padd-15 home-img-pos">
 
                         <a href="https://opensea.io/assets/ethereum/0xa310425046661c523d98344f7e9d66b32195365d/46641" target="blank"> 
-                            <img src="./assets/Images/unnamed.gif" alt="digital animated avatar"> 
+                            <img src="./assets/Images/unnamed.gif" alt="digital animated avatar" height="300" width="300px"> 
                         </a>
 
                     </div>
@@ -103,10 +105,7 @@
 <!-- JS files -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./assets/other-js/jquery-2.1.0.min.js"></script>
-<script src="./assets/other-js/owl-carousel.js"></script>
-<script src="./assets/other-js/jquery.counterup.min.js"></script>
-<script src="./assets/other-js/lightbox.js"></script>
+<script src="./assets/other-js/jquery-3.6.1.min.js"></script>
 <script src="./assets/script.js"></script>
 
 
