--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="logo">
                 <a href="">
-                    <img src="./assets/Images/My project (1).png" alt="personal logo" id="logo-img">
+                    <img src="./assets/Images/My project (1).webp" alt="personal logo" id="logo-img">
                 </a>
             </div>
             
