--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                             Im a Web Developer/Designer, Audio Engineer and a Blockchain developer. Mainly focusing on Blockchain technology and Web3.0 brands, please feel free to check my <a href="./page/Portfolio">Portfolio</a> out, and if theres anything I can help you with Reach Out! 
                         </p>
 
-                        <a href="./page/Contact" class="btn btn-hire" target="blank">
-                        Hire Me
+                        <a href="./assets/Emilio_Thomas_Resume.pdf" download="Emili0_Resume.pdf" class="btn btn-hire" target="_blank">
+                        Download CV
                         </a>
 
                     </div> 
 
                     <div class="home-img padd-15 home-img-pos">
 
-                        <a href="https://opensea.io/assets/ethereum/0xa310425046661c523d98344f7e9d66b32195365d/46641" target="blank"> 
+                        <a href="https://opensea.io/assets/ethereum/0xa310425046661c523d98344f7e9d66b32195365d/46641" target="_blank"> 
                             <img src="./assets/Images/unnamed.gif" alt="digital animated avatar" height="300" width="300px"> 
                         </a>
 
